--- a/Irisha/wwwroot/index.html
+++ b/Irisha/wwwroot/index.html
@@ -11,7 +11,15 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Irisha.styles.css" rel="stylesheet" />
 </head>
+<script>
+    window.getWindowWidth = () => window.innerWidth;
 
+    window.registerResizeHandler = (dotNetHelper) => {
+        window.onresize = () => {
+            dotNetHelper.invokeMethodAsync('UpdateLayout');
+        };
+    };
+</script>
 <body>
     <div id="app">
         <svg class="loading-progress">
